# ocaml-lsp-implementation

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  dune-project  esy.lock.json  lsplib.opam  opam.esy.lock.json  package.json  requirements.export  test.sh  testMessage.txt
lib/: dune  general_types.ml  lsp.ml  lsp.mli  lsplib.ml  rpc.ml  rpc.mli  server.ml  server.mli
lib/Rpc/: rpc.ml  rpc.mli
lib/actions/: action.ml  action.mli  actions.ml  actions.mli  exit.ml  exit.mli  notify.ml  notify.mli
lib/features/: feature.mli
lib/features/diagnostics/: publishDiagnostics.ml  publishDiagnostics.mli
lib/features/general/: initialize.ml  initialize.mli
lib/features/textSynchronisation/: didChange.ml  didChange.mli  didClose.ml  didClose.mli  didOpen.ml  didOpen.mli
lib/general/: errorCodes.mli  initialize.ml
lib/general/handlers/: initializeHandler.ml  initializeHandler.mli
lib/general/params/: initializeParams.ml  initializeParams.mli
lib/protocol/: dune  errorCodes.ml  errorCodes.mli  inMessageHandler.mli
lib/protocol/capabilities/: clientCapabilities.ml  clientCapabilities.mli  markup.mli  serverCapabilities.ml  serverCapabilities.mli  (+2 more)
lib/server/: dune  server.ml  server.mli
lib/state/: channels.ml  channels.mli  state.ml  state.mli
lib/textDocuments/: textDocumentIdentifier.ml  textDocumentIdentifier.mli  textDocumentItem.ml  textDocumentItem.mli  textDocuments.ml  textDocuments.mli
lib/user/: hooks.ml  hooks.mli
lib/utils/: dune  json.ml  json.mli  let_syntax.ml  option.ml  option.mli  result.ml  yojsonShort.ml  yojsonShort.mli
(+125 files in other folders)
