opam-version: "2.0"
name: "lsp"
version: "0.1"
synopsis: "Implementation of lsp"
maintainer: "Sacha 'Giltho' Ayoun <sachaayoun@gmail.com>"
authors: "Sacha 'Giltho' Ayoun <sachaayoun@gmail.com>"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "yojson" "ppx_deriving_yojson" "uri" "extlib" ]
build: ["dune" "build" "-p" name]